expend/collapse position is correct now

--- a/src/hello-world/src/stylesheets/ccilab/scss/components/_ccilab-component.scss
+++ b/src/hello-world/src/stylesheets/ccilab/scss/components/_ccilab-component.scss
@@ -112,8 +112,8 @@
 
 .cci-link_position{
   display: inline-block;
-  position: relative;
-}
+  position: absolute;
+} 
 
 .ccilab-component-sticky-bottom{
   position: sticky;
